--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -28,10 +28,10 @@
 
           <div class="comment-actions" *ngIf="comment.userId === currentUser.id && !comment.isEditing">
             <button class="btn btn-sm btn-edit me-2" (click)="editComment(comment)">
-              <i class="bi bi-pencil"></i>
+              <i class="bi bi-pencil">UPDATE</i>
             </button>
             <button class="btn btn-sm btn-delete" (click)="deleteComment(comment.id)">
-              <i class="bi bi-trash"></i>
+              <i class="bi bi-trash">Delete</i>
             </button>
           </div>
         </div>
@@ -45,7 +45,9 @@
         <input type="text" id="commentInput" class="form-control comment-input me-2"
                placeholder="Comment....." [(ngModel)]="newComment"
                (keyup.enter)="addComment()">
-        <button class="send-btn" (click)="addComment()"><i class="bi bi-send"></i></button>
+        <button class="send-btn icon-button" (click)="addComment()">
+          <i class="bi bi-send"></i>
+        </button>
       </div>
     </div>
   </div>
